--- a/src/content/blog/2026-11-15-kotlin-lsp-nixvim.mdx
+++ b/src/content/blog/2026-11-15-kotlin-lsp-nixvim.mdx
@@ -2,7 +2,7 @@
 title: "Packaging kotlin-lsp for NixVim"
 description: "A short how-to explaining how to package the kotlin-lsp language server with Nix in order to use it with NixVim"
 pubDate: "2025-11-15"
-image: "maven-ai-struggles.png"
+image: "kotlin-lsp-nixvim.png"
 ---
 
 I recently started a small side project for my home lab and decided to implement it with [Kotlin](https://kotlinlang.org).
